istio-learning-YAML/sidecar/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: one
---
apiVersion: v1
kind: Namespace
metadata:
  name: two

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-one
  namespace: one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-one
  template:
    metadata:
      labels:
        app: service-one
    spec:
      containers:
        - name: nginx
          image: aaqibshaikh199/istio-learning:CONTAINER-01
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-two
  namespace: two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-two
  template:
    metadata:
      labels:
        app: service-two
    spec:
      containers:
        - name: nginx
          image: aaqibshaikh199/istio-learning:CONTAINER-02
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: server-one
  namespace: one
spec:
  selector:
    app: service-one
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: server-two
  namespace: two
spec:
  selector:
    app: service-two
  ports:
    - name: http
      port: 80
      targetPort: 80
