istio-learning-YAML/sidecar/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: two-side-car
  namespace: two
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
